--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
     "@types/validator": "^13.12.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
+    "embla-carousel": "^8.3.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-class-names": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "framer-motion": "^11.11.8",
     "globals": "^15.8.0",
     "prettier": "^3.3.2",
+    "react-responsive-carousel": "^3.2.23",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.0"
